--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ anyhow = "1.0.81"
 base64 = "0.22.0"
 gloo-utils = "0.2.0"
 indexed_db_futures = "0.4.1"
+log = "0.4.21"
 qrencode = { version = "0.14.0", default-features = false, features = ["svg"] }
 rmp-serde = "1.1.2"
 serde = { version = "1.0.197", features = ["derive"] }
@@ -15,6 +16,7 @@ serde_json = "1.0.115"
 ulid = { version = "1.1.2", features = ["serde"] }
 wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
+wasm-logger = "0.2.0"
 web-sys = { version = "0.3.69", features = ["HtmlSelectElement", "HtmlFormElement"] }
 yew = { version = "0.21.0", features = ["csr"] }
 yew-hooks = "0.3.1"
