--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,6 @@ opt-level = 'z'
 # opt-level = 's'
 # link time optimization using using whole-program analysis
 lto = true
+
+[dev-dependencies]
+wasm-bindgen-test = "0.3.42"
