--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ qrencode = { version = "0.14.0", default-features = false, features = ["svg"] }
 rmp-serde = "1.1.2"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.115"
+turf = "0.9.4"
 ulid = { version = "1.1.2", features = ["serde"] }
 wasm-bindgen = "0.2.92"
 wasm-bindgen-futures = "0.4.42"
@@ -36,3 +37,15 @@ lto = true
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.42"
+
+[package.metadata.turf]
+load_paths = []
+minify = true
+
+[package.metadata.turf.class_names]
+template = "sb-<original_name>-<id>"
+
+[package.metadata.turf.browser_targets]
+chrome = [80, 1, 2]
+firefox = 65
+safari = [12, 3]
